--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,72 @@ body {
     font-family: 'Comic Neue', cursive;
     background: radial-gradient(circle, rgba(43, 44, 46, 1) 13%, rgba(25, 25, 25, 1) 65%);
 }
+
+.cards{
+    display: flex;
+    width: 1000px;
+}
+
+.card{
+    position: relative;
+    margin: 10px;
+    height: 700px;
+    width: 50%;
+    background-position: center;
+    text-align: center;
+    border-radius: 15px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.7);
+    overflow: hidden;
+}
+
+.one{
+    background-image: url('/jpg/portrait-g5b9fcab43_1920.jpg');
+    background-size: cover;
+}
+
+.two{
+    background-image: url('/jpg/man-g883ede4bc_1280.jpg');
+    background-size: cover;
+}
+
+button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 10px;
+    background: none;
+    border: none;
+    color: #fff;
+    font-size: 36px;
+    text-shadow: 2px 2px 5px rgb(0, 0, 0);
+    cursor: help;
+}
+
+button:hover~.text{
+    clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
+}
+
+.text{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    padding: 80px 30px;
+    background-color: rgba(0, 0, 0, .85);
+    color: #fff;
+    clip-path: polygon(50% 50%, 50% 50%, 50% 50%, 50% 50%, 50% 50%, 50% 50%, 50% 50%, 50% 50%);
+    transition: clip-path 0.7s;
+}
+
+h1{
+    color: rgb(182,179,97);
+
+}
+
+h2{
+    margin-bottom: 30px;
+}
